--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div>
     <h1>Website Development</h1>
     <p>Mambo</p>
-    
+    </div>
+    <p>Test text</p>
+    <div></div>
 </body>
 </html>
