--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div>
-    <h1>Website Development</h1>
-    <p>Mambo</p>
+    <div id="Navbar"></div>
+    <div id="PageTitle">
+        <h1>Website Development</h1>
     </div>
+    <p>Mambo</p>
     <p>Test text</p>
     <div></div>
 </body>
