--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div id="NavBar"></div>
     <div id="PageTitle">
-        <h1>Website Development</h1>
+        <h1>Chris smells</h1>
     </div>
-    <p>Mambo</p>
+    <p>Wa</p>
     <p>Test text</p>
     <div></div>
 </body>
