--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="NavBar"></div>
-    <div id="PageTitle">
+    <div id="NavBar">
         <h1>Chris smells</h1>
     </div>
     <p>Wa</p>
