--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id="NavBar"></div>
+    <div id="PageTitle"></div>
     <div id="PageTitle">
         <h1>Chris smells</h1>
     </div>
