--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id="NavBar"></div>
+    <!--Navigation bar widgets-->
+    <div id="NavBar">
+        <ul id="NavBar">
+            <li><a href="odubzalpha.github.io/index.html">Home</a></li>
+            <li><a href="odubzalpha.github.io/test.html">News</a></li>
+            <li><a href="contact.asp">Contact</a></li>
+            <li><a href="about.asp">About</a></li>
+        </ul>
+    </div>
+    <!--Title of the page-->
     <div id="PageTitle">
         <h1>Chris smells</h1>
     </div>
