--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <!--Title of the page-->
     <div id="PageTitle">
-        <h1>Chris smells</h1>
+        <h1>Cool Website</h1>
     </div>
     <p>Wa</p>
     <p>Test text</p>
