--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!--Navigation bar widgets-->
     <div id="NavBar">
-        <ul id="NavBar">
+        <ul id="NavList">
             <li><a href="odubzalpha.github.io/index.html">Home</a></li>
             <li><a href="odubzalpha.github.io/test.html">News</a></li>
             <li><a href="contact.asp">Contact</a></li>
